force-app/main/default/objects/Case/fields/IDO_Care_Program__c.field-meta.xml
<CustomField>
    <fullName>IDO_Care_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up field on &apos;Device Shipment&apos;&apos; case to track which care program is the request for</description>
    <label>Care Program</label>
    <referenceTo>CareProgram</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>