force-app/main/default/objects/Case/fields/IDO_Fever__c.field-meta.xml
<CustomField>
    <fullName>IDO_Fever__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fever</label>
    <type>Checkbox</type>
</CustomField>