force-app/main/default/objects/Case/fields/IDO_Medicaid_Provider_Number__c.field-meta.xml
<CustomField>
    <fullName>IDO_Medicaid_Provider_Number__c</fullName>
    <formula>Provider_Application__r.Medicaid_Provider_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Medicaid Provider Number</label>
    <type>Text</type>
</CustomField>