force-app/main/default/objects/Case/fields/IDO_Medicare_Provider__c.field-meta.xml
<CustomField>
    <fullName>IDO_Medicare_Provider__c</fullName>
    <formula>IF(ISPICKVAL( Provider_Application__r.Participating_Medicare_provider__c , &quot;Yes&quot;), &quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Medicare Provider</label>
    <type>Text</type>
</CustomField>