force-app/main/default/objects/Case/fields/IDO_Medicare_Provider_Number__c.field-meta.xml
<CustomField>
    <fullName>IDO_Medicare_Provider_Number__c</fullName>
    <formula>Provider_Application__r.Medicare_provider_number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Medicare Provider Number</label>
    <type>Text</type>
</CustomField>