force-app/main/default/objects/Case/fields/IDO_Product_Request_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>IDO_Product_Request_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Custom field to capture the Product Request Line Item which created the device shipment case.</description>
    <label>Product Request Line Item</label>
    <referenceTo>ProductRequestLineItem</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>