force-app/main/default/objects/Case/fields/Intractable_Pain__c.field-meta.xml
<CustomField>
    <fullName>Intractable_Pain__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Intractable Pain</label>
    <type>Checkbox</type>
</CustomField>