force-app/main/default/objects/Case/fields/IsCurrentUser__c.field-meta.xml
<CustomField>
    <fullName>IsCurrentUser__c</fullName>
    <formula>IF(($User.ContactId = ContactId) || ($User.Id = OwnerId),TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsCurrentUser</label>
    <type>Checkbox</type>
</CustomField>