force-app/main/default/objects/Case/fields/Last_4_digits_of_SSN__c.field-meta.xml
<CustomField>
    <fullName>Last_4_digits_of_SSN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Last 4 digits of SSN</label>
    <type>Checkbox</type>
</CustomField>