force-app/main/default/objects/Case/fields/Late_to_Refill_Reason__c.field-meta.xml
<CustomField>
    <fullName>Late_to_Refill_Reason__c</fullName>
    <label>Late to Refill Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wants to manage own refills</fullName>
            </value>
            <value>
                <fullName>Doesn&apos;t have time</fullName>
            </value>
            <value>
                <fullName>Has too many meds already / stockpiling</fullName>
            </value>
            <value>
                <fullName>Can&apos;t afford to refill</fullName>
            </value>
            <value>
                <fullName>Wants to talk to MD first</fullName>
            </value>
            <value>
                <fullName>No longer taking</fullName>
            </value>
            <value>
                <fullName>Too many side effects</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>