force-app/main/default/objects/Case/fields/Member_ID__c.field-meta.xml
<CustomField>
    <fullName>Member_ID__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Member ID</label>
    <type>Checkbox</type>
</CustomField>