force-app/main/default/objects/Case/fields/Member_Renewal_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Member_Renewal_Outcome__c</fullName>
    <label>Member Renewal Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Coverage Renewed</fullName>
            </value>
            <value>
                <fullName>Declined Renewal</fullName>
            </value>
            <value>
                <fullName>Couldn&apos;t Reach Member</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>