force-app/main/default/objects/Case/fields/Networks__c.field-meta.xml
<CustomField>
    <fullName>Networks__c</fullName>
    <label>Networks</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HMO</fullName>
            </value>
            <value>
                <fullName>PPO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>