force-app/main/default/objects/Case/fields/New_PCP_Name__c.field-meta.xml
<CustomField>
    <fullName>New_PCP_Name__c</fullName>
    <label>New PCP Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>