force-app/main/default/objects/Case/fields/Next_Step__c.field-meta.xml
<CustomField>
    <fullName>Next_Step__c</fullName>
    <label>Next Step</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Follow-up Email</fullName>
            </value>
            <value>
                <fullName>Follow-up Fax</fullName>
            </value>
            <value>
                <fullName>Waiting on CAQH Updates</fullName>
            </value>
            <value>
                <fullName>Non-Compliance Specialist</fullName>
            </value>
            <value>
                <fullName>Certified Letter</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>