force-app/main/default/objects/Case/fields/Notification_Date__c.field-meta.xml
<CustomField>
    <fullName>Notification_Date__c</fullName>
    <description>Field Action : Turns the notification date/time field into a date field.</description>
    <formula>DATEVALUE( FA_Notification_Date_Time__c )</formula>
    <label>Notification Date</label>
    <type>Date</type>
</CustomField>