force-app/main/default/objects/Case/fields/NPI__c.field-meta.xml
<CustomField>
    <fullName>NPI__c</fullName>
    <formula>Provider_Application__r.NPI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NPI</label>
    <type>Text</type>
</CustomField>