force-app/main/default/objects/Case/fields/NPI_PIN__c.field-meta.xml
<CustomField>
    <fullName>NPI_PIN__c</fullName>
    <label>NPI/PIN</label>
    <length>15</length>
    <type>Text</type>
</CustomField>