force-app/main/default/objects/Case/fields/Other_Relevant_History__c.field-meta.xml
<CustomField>
    <fullName>Other_Relevant_History__c</fullName>
    <label>Other Relevant History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>