force-app/main/default/objects/Case/fields/Outcome_Attributed_to_Adverse_Event__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Attributed_to_Adverse_Event__c</fullName>
    <label>Outcome Attributed to Adverse Event</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Life-threatening</fullName>
            </value>
            <value>
                <fullName>Hospitalization (initial or prolonged)</fullName>
            </value>
            <value>
                <fullName>Other Serious or Important Medical Events</fullName>
            </value>
            <value>
                <fullName>Required Intervention to Prevent Permanent Impairment/Damage</fullName>
            </value>
            <value>
                <fullName>Disability or Permanent Damage</fullName>
            </value>
            <value>
                <fullName>Congenital Anomaly/Birth Defects</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>