force-app/main/default/objects/Case/fields/PHI__c.field-meta.xml
<CustomField>
    <fullName>PHI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PHI</label>
    <referenceTo>PHI__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>