force-app/main/default/objects/Case/fields/Pick_Up__c.field-meta.xml
<CustomField>
    <fullName>Pick_Up__c</fullName>
    <description>Part of the Escalation URL package. Alena Abrosimova</description>
    <formula>IF (Escalation_URL__c =&quot;&quot;, &quot;&quot;, 
IF (Escalation_URL__c &lt;&gt; &quot;&quot;, HYPERLINK(Escalation_URL__c, IMAGE(&quot;/resource/context&quot;, &quot;&quot;), &quot;_parent&quot;), &quot;_parent&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pick Up</label>
    <type>Text</type>
</CustomField>