force-app/main/default/objects/Case/fields/PQC__c.field-meta.xml
<CustomField>
    <fullName>PQC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PQC</label>
    <type>Checkbox</type>
</CustomField>