force-app/main/default/objects/Case/fields/PQC_Submitted__c.field-meta.xml
<CustomField>
    <fullName>PQC_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PQC Submitted</label>
    <type>Checkbox</type>
</CustomField>