force-app/main/default/objects/Case/fields/Practice_DBA_name__c.field-meta.xml
<CustomField>
    <fullName>Practice_DBA_name__c</fullName>
    <formula>Provider_Application__r.PracticeDBA_name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Practice/DBA name</label>
    <type>Text</type>
</CustomField>