force-app/main/default/objects/Case/fields/Primary_specialty__c.field-meta.xml
<CustomField>
    <fullName>Primary_specialty__c</fullName>
    <formula>IF(ISPICKVAL(Provider_Application__r.Primary_specialty__c, &quot;Family Medicine&quot;), &quot;Family Medicine&quot;, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary specialty</label>
    <type>Text</type>
</CustomField>