force-app/main/default/objects/Case/fields/Product_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Product_Inventory__c</fullName>
    <description>Field Action : As part of the Business Reply process, the portal user indicates whether they have any product involved in the field action currently in their inventory that will be returned.</description>
    <label>Product Inventory?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No product to return</fullName>
            </value>
            <value>
                <fullName>Product will be returned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>