force-app/main/default/objects/Case/fields/Product_Pharma__c.field-meta.xml
<CustomField>
    <fullName>Product_Pharma__c</fullName>
    <label>Drug Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oncarta</fullName>
            </value>
            <value>
                <fullName>Envira</fullName>
            </value>
            <value>
                <fullName>Dudviem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>