force-app/main/default/objects/Case/fields/Product_to_be_returned__c.field-meta.xml
<CustomField>
    <fullName>Product_to_be_returned__c</fullName>
    <description>Field Action : An at-a-glance view of whether product will be returned as part of this field action case.</description>
    <formula>IF( TEXT(Product_Inventory__c)=&apos;Product will be returned&apos;, &apos;✅&apos;,
IF ( TEXT(Product_Inventory__c)=&apos;No product to return&apos;, &apos;❌&apos;,
&apos;❓&apos;))</formula>
    <label>Product to be returned?</label>
    <type>Text</type>
</CustomField>