force-app/main/default/objects/Case/fields/Provider_Application__c.field-meta.xml
<CustomField>
    <fullName>Provider_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Payer</description>
    <label>Provider Application</label>
    <referenceTo>Provider_Application__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>