force-app/main/default/objects/Case/fields/Provider_date_of_birth__c.field-meta.xml
<CustomField>
    <fullName>Provider_date_of_birth__c</fullName>
    <formula>Provider_Application__r.Provider_date_of_birth__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provider date of birth</label>
    <type>Date</type>
</CustomField>