force-app/main/default/objects/Case/fields/Provider_license_number__c.field-meta.xml
<CustomField>
    <fullName>Provider_license_number__c</fullName>
    <formula>Provider_Application__r.Provider_license_number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provider license number</label>
    <type>Text</type>
</CustomField>