force-app/main/default/objects/Case/fields/Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Provider_Name__c</fullName>
    <formula>Provider_Application__r.Provider_first_name__c &amp;&apos; &apos;&amp; Provider_Application__r.Provider_last_name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provider Name</label>
    <type>Text</type>
</CustomField>