force-app/main/default/objects/Case/fields/Provider_professional_title__c.field-meta.xml
<CustomField>
    <fullName>Provider_professional_title__c</fullName>
    <formula>Provider_Application__r.Provider_professional_title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provider professional title</label>
    <type>Text</type>
</CustomField>