force-app/main/default/objects/Case/fields/Reason_for_ID_Card_Request__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_ID_Card_Request__c</fullName>
    <label>Reason for ID Card Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Never received a card</fullName>
            </value>
            <value>
                <fullName>Additional card for household</fullName>
            </value>
            <value>
                <fullName>Lost ID Card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>