force-app/main/default/objects/Case/fields/Referred_BY__c.field-meta.xml
<CustomField>
    <fullName>Referred_BY__c</fullName>
    <description>Captures the source of the CM referral - critical for NCQA reporting.</description>
    <label>Referred By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Data Report</fullName>
            </value>
            <value>
                <fullName>Facility Discharge Planner</fullName>
            </value>
            <value>
                <fullName>Family / Caregiver</fullName>
            </value>
            <value>
                <fullName>Internal Department (UM, QA, AG, etc.)</fullName>
            </value>
            <value>
                <fullName>Member (Self)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Provider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>