force-app/main/default/objects/Case/fields/Referring_Physician__c.field-meta.xml
<CustomField>
    <fullName>Referring_Physician__c</fullName>
    <label>Referring Physician</label>
    <length>30</length>
    <type>Text</type>
</CustomField>