force-app/main/default/objects/Case/fields/Refill_Addresses__c.field-meta.xml
<CustomField>
    <fullName>Refill_Addresses__c</fullName>
    <label>Refill Addresses</label>
    <length>250</length>
    <type>Text</type>
</CustomField>