force-app/main/default/objects/Case/fields/Refill_Order_Fulfillment__c.field-meta.xml
<CustomField>
    <fullName>Refill_Order_Fulfillment__c</fullName>
    <label>Refill Order Fulfillment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mail Order</fullName>
            </value>
            <value>
                <fullName>Pharmacy Pickup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>