force-app/main/default/objects/Case/fields/Relevant_Tests_Laboratory_Data__c.field-meta.xml
<CustomField>
    <fullName>Relevant_Tests_Laboratory_Data__c</fullName>
    <label>Relevant Tests/Laboratory Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>