force-app/main/default/objects/Case/fields/Renewal_Decline_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Decline_Reasons__c</fullName>
    <label>Renewal Decline Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Member_Renewal_Outcome__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cost</fullName>
            </value>
            <value>
                <fullName>Coverage with a Competitor</fullName>
            </value>
            <value>
                <fullName>Benefits</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>