force-app/main/default/objects/Case/fields/Replacement_Product_Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Product_Shipping_Address__c</fullName>
    <description>Field Action :  As part of the Business Reply process flow on the portal, the Field Action Coordinator is presented with a pre-populated field showing the address where replacement product should be shipped.  They have the option to update it in the flow or accept the default.  The flow populates the value from the Account associated with the Field Action Case.</description>
    <label>Replacement Address / PO</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>