force-app/main/default/objects/Case/fields/Requested_Date_Time2__c.field-meta.xml
<CustomField>
    <fullName>Requested_Date_Time2__c</fullName>
    <description>This field is used to track the date and time when a fax, mail or other manual auth submission was received.</description>
    <inlineHelpText>This field is used to track the date and time when a fax, mail or other manual auth submission was received.</inlineHelpText>
    <label>Requested Date/Time</label>
    <type>DateTime</type>
</CustomField>