force-app/main/default/objects/Case/fields/RGA_Required__c.field-meta.xml
<CustomField>
    <fullName>RGA_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RGA Required</label>
    <type>Checkbox</type>
</CustomField>