force-app/main/default/objects/Case/fields/RGA_Requires_Manager_Approval__c.field-meta.xml
<CustomField>
    <fullName>RGA_Requires_Manager_Approval__c</fullName>
    <label>RGA Requires Manager Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>