force-app/main/default/objects/Case/fields/Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>Risk_Score__c</fullName>
    <formula>Account.HLS_Payer_Risk_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Risk Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>