force-app/main/default/objects/Case/fields/SDO_Service_Article_Created__c.field-meta.xml
<CustomField>
    <fullName>SDO_Service_Article_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Article Created</label>
    <type>Checkbox</type>
</CustomField>