force-app/main/default/objects/Case/fields/SDO_Service_Close_Summary__c.field-meta.xml
<CustomField>
    <fullName>SDO_Service_Close_Summary__c</fullName>
    <label>Close Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>