force-app/main/default/objects/Case/fields/Shortness_of_Breath__c.field-meta.xml
<CustomField>
    <fullName>Shortness_of_Breath__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shortness of Breath</label>
    <type>Checkbox</type>
</CustomField>