force-app/main/default/objects/Case/fields/Standard_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Standard_Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Standard Pricing</label>
    <type>Checkbox</type>
</CustomField>