force-app/main/default/objects/Case/fields/State_of_Primary_Office__c.field-meta.xml
<CustomField>
    <fullName>State_of_Primary_Office__c</fullName>
    <formula>Provider_Application__r.Which_state_has_your_primary_office__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State of Primary Office</label>
    <type>Text</type>
</CustomField>