force-app/main/default/objects/Case/fields/Status_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Status_Indicator__c</fullName>
    <formula>IMAGE(URLsrc__c&amp;&quot;/servlet/servlet.ImageServer?id=&quot;&amp;CASE( Status, 
&quot;New&quot;, &quot;015Ho000004v7on&amp;oid=00DHo000002F4fd&quot;, 
&quot;Working&quot;,&quot;015Ho000004v7oo&amp;oid=00DHo000002F4fd&quot;,
&quot;Waiting on customer&quot;, &quot;015Ho000004v7op&amp;oid=00DHo000002F4fd&quot;,
&quot;Response Received&quot;,&quot;015Ho000004v7oq&amp;oid=00DHo000002F4fd&quot;,
&quot;Escalated&quot;, &quot;015Ho000004v7or&amp;oid=00DHo000002F4fd&quot;, 
&quot;Warning&quot;,&quot;015Ho000004v7os&amp;oid=00DHo000002F4fd&quot;,
&quot;Violation&quot;,&quot;015Ho000004v7ot&amp;oid=00DHo000002F4fd&quot;,
&quot;Closed in Portal&quot;, &quot;015Ho000004v7ou&amp;oid=00DHo000002F4fd&quot;,
&quot;Closed&quot;,&quot;015Ho000004v7ou&amp;oid=00DHo000002F4fd&quot;,
&quot;Closed - First Call&quot;, &quot;015Ho000004v7ou&amp;oid=00DHo000002F4fd&quot;,
&quot;Submitting Feature&quot;,&quot;015Ho000004v7or&amp;oid=00DHo000002F4fd&quot;,
&quot;015Ho000004v7on&amp;oid=00DHo000002F4fd&quot;),&quot;Status&quot;,24,24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Indicator</label>
    <type>Text</type>
</CustomField>