force-app/main/default/objects/Case/fields/Status_Reason_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Status_Reason_Recommendation__c</fullName>
    <label>Status Reason &amp; Recommendation</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>