force-app/main/default/objects/Case/fields/Timeline_Date__c.field-meta.xml
<CustomField>
    <fullName>Timeline_Date__c</fullName>
    <label>Timeline Date</label>
    <type>DateTime</type>
</CustomField>