force-app/main/default/objects/Case/fields/Timer_Countdown_Date__c.field-meta.xml
<CustomField>
    <fullName>Timer_Countdown_Date__c</fullName>
    <label>Timer Countdown Date Timer</label>
    <type>Date</type>
</CustomField>