force-app/main/default/objects/Case/fields/Transportation_Barrier_Identified__c.field-meta.xml
<CustomField>
    <fullName>Transportation_Barrier_Identified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transportation Barrier Identified</label>
    <type>Checkbox</type>
</CustomField>