force-app/main/default/objects/Case/fields/tspa__Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>tspa__Contact_Name__c</fullName>
    <formula>Contact.FirstName+&apos; &apos;+ Contact.LastName</formula>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>