force-app/main/default/objects/Case/fields/UMCustomer_emoticon__c.field-meta.xml
<CustomField>
    <fullName>UMCustomer_emoticon__c</fullName>
    <formula>IF( (TEXT( UMCustomer_emoticon_value__c ) ==&quot;&quot;) ,&quot;&quot; ,IMAGE( &quot;resource/um_branding/assets/&quot;+TEXT( UMCustomer_emoticon_value__c ) +&quot;.png&quot; ,TEXT( UMCustomer_emoticon_value__c ) ,20,20))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer emoticon</label>
    <type>Text</type>
</CustomField>